[package]
name = "crunchy"
version = "0.2.2"
authors = ["Vurich <jackefransham@hotmail.co.uk>"]
description = "Crunchy unroller: deterministically unroll constant loops"
license = "MIT"
build = "build.rs"

[dependencies]
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
"std" = ["mesalock"]
"limit_64" = []
"limit_128" = []
"limit_256" = []
"limit_512" = []
"limit_1024" = []
"limit_2048" = []
"default" = ["limit_128"]
"mesalock" = ["sgx_tstd"]
